Changes in robCompositions version 2.0.7
  + bug in daFisher resolved
  + additional argment in missPattern

Changes in robCompositions version 2.0.6
  + new method for imputation of rounded zeros in imputeBDLs

Changes in robCompositions version 2.0.5
  + improved documentation
  + version of robCompositions fits now to the Springer book
  + orthbasis now times -1
  + ilr.2x2 now fits to the formulas in the book, and not for the paper
  + bug in daFisher resolved
  + bug in external variables in pcaCoDa solved
  + registering C-code

Changes in robCompositions version 2.0.4
  + aDist now again works for vectors
  + added following data sets: 
  socExp, 
  cancerMN, 
  educFM, 
  electionATbp, 
  employment, 
  employment_df, 
  GDPsatis, 
  govexp,
  instw, 
  isic32, 
  mortality_tab, 
  precipitation,  
  rcodes, 
  teachingStuff,
  unemployed
  + corrected documentation for ageCatWorld data
  + new functions: 
  coord, 
  gmean, 
  gmean_sum, 
  ilr.2x2, 
  ind2x2, 
  indTab, 
  int2x2, 
  indTab, 
  int2x2, 
  intArray, 
  intTab, 
  pTab, 
  rSDev, 
  rSDev.test.R, 
  SDev, 
  stats
  + bug in daFisher solved and new adapted predict function

Changes in robCompositions version 2.0.3
  + new function perturbation() and powering()
  + new function for inner product (iprod())
  + new funciton balances()
  + addLR, cenLR with optional different base in logrithm
  + isomLR with more possibilites for a normalizing constant
  + isomLR depricated, using now pivotCoord instead
  + isomLRinv depricated, using pivotCoordInv instead
  + orthbasis() now returns also the basis vectors
  + bug in aDist solved
  + aDist now much faster
  + new function center()
  + method symm (symmetric balances) in pivotCoord

Changes in robCompositions version 2.0.2
  + new function balZav()
  + new function daCoDa()
  + new function clustCoDa()
  + new function corCoDa()
  + aDist for single matrix
  + pcaCoDa() with external variables
  + new data set alcoholreg 