@@ -146,6 +146,7 @@ importFrom(rrcov,QdaCov)
 importFrom(sROC,kCDF)
 importFrom(stats,aggregate)
 importFrom(stats,as.dist)
+importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,cov)
