@@ -1,6 +1,7 @@
 Changes in robCompositions version 2.0.7
   + bug in daFisher resolved
   + additional argment in missPattern
+  + imputeBDLs now includes a new method 
 
 Changes in robCompositions version 2.0.6
   + new method for imputation of rounded zeros in imputeBDLs
